tests/NormalTests/paczka1/small_fuzzy/21854626.err
Error in line 1: A742 A742 36,3
Error in line 6: QCZypJUH A521 29,7
Error in line 4: wqp A742 86,7
Error in line 10: fZeR A521 58,7
